service/nginx-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service 
spec:
  selector: 
    web: nginx
  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: mochabdulrouf/curl-tester
