service/service-example-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    web: example-web
spec:
  type: ExternalName
  externalName: example.com
  ports:
    - port: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: mochabdulrouf/curl-tester
