service/service-node-port-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    web: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
