service/service-ingress-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    web: nginx
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    web: nginx
spec:
  # Rules adalah Daftar aturan routing
  rules:
    - host: nginx.rouf.local
      http:
        paths:
          - path: /   
            pathType: Prefix
            backend:
              service:
               name: nginx-service
               port:
                number: 80
